test/Fail/Issue1976-constraints.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  _4 = B : Set (blocked on _4)
  _2 = B : Set (blocked on _2)

Issue1976-constraints.agda:16.10-30.11: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue1976-constraints.agda:16.10-11
  Issue1976-constraints.agda:24.10-11
  Issue1976-constraints.agda:30.10-11
